# Solar-Panel-AI-Analysis

./: .gitignore  README.md  pyproject.toml
.cursor/: .cursorrules
.cursor/context/: ARCH_SUMMARY.md  CONTRACTS.md  CURSOR_REORGANIZATION_PROMPT.md  HOW_TO_USE.md  PROJECT_STATE.md  architecture.md
configs/: augmentation_pipeline.yaml  dataset_rgb.yaml  dataset_thermal.yaml  dataset_unified.yaml  inference.yaml  model_rgb.yaml  model_thermal.yaml  streaming.yaml  train_local.yaml  train_unified.yaml
models/v1.0.2/: metadata.json
models/v1.0.2/best/: data.pkl
models/v1.0.3/: metadata.json
proje_review/: Ara_Rapor.html  create_pdf.py
reports/v1.0.2/: report_index.json
reports/v1.0.3/: report_index.json  val_summary.json
runs/detect/solar_mvp/: args.yaml  results.csv
runs/detect/solar_mvp2/: args.yaml
runs/detect/solar_mvp3/: args.yaml  results.csv
runs/detect/train/: args.yaml
scripts/: __init__.py  augment.py  countClassObjects.py  dataset_common.py  dataset_prep.py  dataset_registry.yaml  example.txt  experiment_artifacts.py  predict_live.py  resize_to_640_letterbox.py  train.py  unify_classes.py  validate.py  yolo_data_yaml.py
scripts/converters/: __init__.py  voc_to_yolo.py  yolo_passthrough.py
scripts/schemas/: __init__.py  train_config.py
scripts/utils/: __init__.py  config_loader.py  device.py  logger.py  metadata.py  versioning.py
streaming/: README.md  main.py
streaming/.cursor/context/: ARCH_SUMMARY.md  CONTRACTS.md  HOW_TO_DEVELOP.md  PROJECT_STATE.md
streaming/configs/: display.yaml  streaming.yaml
(+862 files in other folders)
