[project]
name = "Solar-Panel-AI-Analysis"
version = "0.1.0"
description = "Multi-Modal (RGB & Thermal) Solar Panel Object Detection System YOLO-based object detection pipeline for identifying and classifying specific defects in solar panels using both RGB and thermal imagery. Includes preprocessing, custom labeling workflows, and Dockerized deployment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "label-studio>=1.22.0",
    "opencv-python>=4.13.0.92",
    "structlog>=25.5.0",
    "ultralytics>=8.4.19",
    "torch",
    "torchvision",
    "tensorrt>=10.16.1.11",
    "onnxruntime-gpu>=1.24.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
