[project]
name = "Solar-Panel-AI-Analysis"
version = "0.1.0"
description = "Multi-Modal (RGB & Thermal) Solar Panel Object Detection System YOLO-based object detection pipeline for identifying and classifying specific defects in solar panels using both RGB and thermal imagery. Includes preprocessing, custom labeling workflows, and Dockerized deployment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "label-studio>=1.22.0",
    "opencv-python>=4.13.0.92",
    "reportlab>=4.4.10",
    "ultralytics>=8.4.19",
]
